--- a/Ren_exp_demo/experiment/index.html
+++ b/Ren_exp_demo/experiment/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Experiment Demo</title>
+    <title>人格问卷</title>
 
     <!-- CSS: jspsych -->
     <link href="jspsych-6.1.0/css/jspsych.css" rel="stylesheet" type="text/css">
